# Corrected spacing between the institutional signature and the message space
git-svn-id: https://svn.ircan.gc.ca/svn/theme-clf2-nsi2@40 27b413b2-b569-4c5a-91b7-c399223a659e

--- a/theme-clf2-nsi2/css/wp-pa-theme-clf2-nsi2-ie6.css
+++ b/theme-clf2-nsi2/css/wp-pa-theme-clf2-nsi2-ie6.css
@@ -7,7 +7,7 @@ Conditions régissant l'utilisation : http://tbs-sct.ircan.gc.ca/projects/gcwwwt
 #cn-centre-col-inner {display: inline-block;} 
 #cn-foot-inner {margin-top: -18px;}
 #cn-in-links {display: inline-block; float: none;}
-#cn-sig {margin-bottom: 10px;}
+#cn-sig {margin-bottom: 9px;}
 #cn-msg-space {height: 250px;}
 #cn-lower-msg {height: 120px;}
 #cn-lower-msg p {margin-top: 18px;}
