--- a/theme-clf2-nsi2/css/wp-pa-theme-clf2-nsi2-ie7.css
+++ b/theme-clf2-nsi2/css/wp-pa-theme-clf2-nsi2-ie7.css
@@ -7,3 +7,4 @@ Conditions régissant l'utilisation : http://tbs-sct.ircan.gc.ca/projects/gcwwwt
 #cn-lower-msg p {margin-top: 18px;}
 #cn-other-lang-links {margin-top: 10px;}
 #cn-in-links {margin-top: 10px;}
+#cn-sig {margin-bottom: 9px;}
