--- a/theme-clf2-nsi2/css/wp-pa-theme-clf2-nsi2.css
+++ b/theme-clf2-nsi2/css/wp-pa-theme-clf2-nsi2.css
@@ -8,7 +8,7 @@ Conditions régissant l'utilisation : http://tbs-sct.ircan.gc.ca/projects/gcwwwt
 
 #cn-skip-head li span {display: block;}
 #cn-skip-head a:hover, #cn-skip-head a:focus, #cn-skip-head a:active {background-color: #363;}
-#cn-sig {margin-bottom: 10px;}
+#cn-sig {margin-bottom: 6px;}
 #cn-msg-space {margin-bottom: 30px; min-height: 250px; width: 600px; color: #000;}
 #cn-upper-msg {height: 130px; background: #363;}
 #cn-lower-msg {min-height: 120px; background: #CCC; float: left; width: 100%;}
